--- a/app/assets/css/mixins/layout.scss
+++ b/app/assets/css/mixins/layout.scss
@@ -58,3 +58,17 @@
   align-content: $align-content;
   flex-wrap: $wrap;
 }
+
+@mixin flex-gap($column-gap: 0, $row-gap: 0) {
+  flex-wrap: wrap;
+  margin-left: -0.5 * $column-gap;
+  margin-right: -0.5 * $column-gap;
+  margin-top: -0.5 * $row-gap;
+  margin-bottom: -0.5 * $row-gap;
+  & > * {
+    margin-left: 0.5 * $column-gap;
+    margin-right: 0.5 * $column-gap;
+    margin-top: 0.5 * $row-gap;
+    margin-bottom: 0.5 * $row-gap;
+  }
+}
