fix: layout misses

--- a/app/assets/css/mixins/layout.scss
+++ b/app/assets/css/mixins/layout.scss
@@ -60,7 +60,10 @@
 }
 
 @mixin flex-gap($column-gap: 0, $row-gap: 0) {
-  flex-wrap: wrap;
+  @if $row-gap > 0 {
+    flex-wrap: wrap;
+  }
+
   margin-left: -0.5 * $column-gap;
   margin-right: -0.5 * $column-gap;
   margin-top: -0.5 * $row-gap;
